[tool.poetry]
name = "exchange-rate-api"
version = "0.1.0"
description = ""
authors = ["Stephen Kettley <kettleystephen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.2"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
python-dotenv = "^1.0.1"
requests = "^2.32.3"
redis = "^5.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
